
- added ISVNStatus#isWcLocked() and ISVNStatus#isSwitched()
- removed the getRepositoryRoot() method from adapter interface
- added logMessage(url, paths[], ...)
- fixed the local->UTF-8 log message conversion problems

* July 12, 2006
- relicense under EPL

* 0.9.35
- removed dependency on jakarta-regexp
- commandline now executed with locale explicitely set
- SVNRevision.getRevision() now takes as argument also a date format

* 0.9.34
- removed dependency on commons-lang
- updated to JavaSVN 0.9.2
- updated to jakarta-regexp-1.4
- win32 javahl dlls updated to 1.2.3
- several untracked additions and changes to API done meanwhile


* 0.9.23
- dlls updated using svn-win32-1.1.0.zip, libsvnjavahl-1.dll and svn-javahl.jar updated using svn-win32-1.1.0_javahl.zip
- new junit tests adapted from http://svn.collab.net/viewcvs/svn/trunk/subversion/bindings/java/javahl/src/org/tigris/subversion/javahl/tests/
- JhlClientAdapter.annotate now uses JhlAnnotations instead of CmdLineAnnotations
- Bugs correction :
  > many bugs corrected concerning command line interface
  > absolute path used instead of canonical path (Fix for issues 142 and 147)
  > Fix for issue 151 : CmdLineLogMessage.createLogMessages, correction to avoid NPE in HistoryTableProvider
  > Cache available flag for client adapters.  This gives an improvement of about 150ms for the CmdLineClientAdapter.
  > Fixed ordering of dependencies to stop libdb42.dll not found messages on windows
  > JhlNotificationHandler : Update messages were printing numbers instead of characters for content and property statuses.
  > JhlClientAdapter.getStatus now uses a new parameter for status : no-ignore because we want to retrieve all entries including ignored-ones when getAll is true
- API Additions :
  ISVNClientAdapter.getInfo
  ISVNLogMessage.getChangePaths
  ISVNClientAdapter.switchToUrl

* 0.9.13
- API Additions:
  ISVNClientAdapter.getStatus(File path, boolean descend, boolean getAll, boolean contactServer)